crates/analyzer/tests/snapshots/errors__call_create2_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: incorrect type for argument to `Bar.create2`
  ┌─ compile_errors/call_create2_with_wrong_type.fe:7:21
  │
7 │         Bar.create2(true, 1)
  │                     ^^^^ this has type `bool`; expected a number

error: `create2` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/call_create2_with_wrong_type.fe:8:13
  │
8 │         Bar.create2(1)  # agroce #447
  │             ^^^^^^^ - supplied 1 argument
  │             │        
  │             expects 2 arguments

error: `create2` expects 2 arguments, but 0 were provided
  ┌─ compile_errors/call_create2_with_wrong_type.fe:9:13
  │
9 │         Bar.create2()
  │             ^^^^^^^-- supplied 0 arguments
  │             │       
  │             expects 2 arguments


